// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<Button /> renders correctly with default props 1`] = `
<button
  class="inline-flex items-center justify-center text-sm font-semibold transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-600 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none ring-offset-background touch-target bg-gray-900 text-white hover:bg-gray-800 rounded-full shadow-[0_8px_24px_rgba(0,0,0,0.12)] hover:shadow-[0_12px_32px_rgba(0,0,0,0.16)] hover:scale-[1.02] h-11 py-2.5 px-6"
>
  Click me
</button>
`;

exports[`<Button /> renders correctly with variant outline 1`] = `
<button
  class="inline-flex items-center justify-center text-sm font-semibold transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-600 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none ring-offset-background touch-target border-2 border-gray-300 hover:border-gray-400 hover:bg-gray-50 rounded-2xl h-11 py-2.5 px-6"
>
  Outline
</button>
`;
